<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/background_main">
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="314dp"
        android:paddingTop="@dimen/image_landing_top_padding"
        app:srcCompat="@drawable/fitnesslogo"/>

    <EditText
        android:id="@+id/edit_text_username_login_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/edit_text_sign_up_page_padding_horizontal"
        android:layout_marginTop="@dimen/edit_text_enter_name_padding_top"
        android:background="@color/sign_up_edit_text_color_background"
        android:hint="@string/name_hint"
        android:paddingVertical="@dimen/edit_text_sign_up_padding_vertical"
        android:textColorHint="@color/white"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/edit_text_password_login_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/edit_text_sign_up_page_padding_horizontal"
        android:layout_marginTop="@dimen/edit_text_enter_password_padding_top"
        android:background="@color/sign_up_edit_text_color_background"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:paddingVertical="@dimen/edit_text_sign_up_padding_vertical"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />
    <Button
        android:id="@+id/button_login_login_page"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sign_up_button_sign_up_page_padding_top"
        android:paddingHorizontal="@dimen/button_login_padding_horizontal"
        android:text="@string/login_btn_txt"
        android:textColor="@color/white"
        android:backgroundTint="@color/button_color_main_back"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dont_have_account_padding_top"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/text_go_to_login_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sign_up_padding_left"
            android:text="@string/sign_up"
            android:textColor="@color/sign_up_color"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>